fix [#31368] No masking drawn in Weightpaint-mode when displayed as wireframe